# SPaC-Kit

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml
.github/workflows/: add_to_project.yml  ci.yml  publish.yml
src/pydownlinkparser/: parse_ccsds_downlink.py
src/spac_kit/: __init__.py
src/spac_kit/autodocs/: __init__.py
src/spac_kit/autodocs/resources/: spac-kit.css
src/spac_kit/parser/: Packets.py  downlink_to_excel.py  parse_ccsds_downlink.py  remove_non_ccsds_headers.py  test_utils.py
tests/: README.md  __init__.py  conftest.py
tests/autodocs/: __init__.py  conftest.py  test_formatters.py  test_integration.py  test_node_generation.py  test_packet_loading.py  test_setup.py  test_stub_generation.py
tests/parser/: __init__.py  test_downlink_to_excel.py  test_packets.py  test_parse_ccsds_downlink.py  test_remove_non_ccsds_headers.py  test_test_utils.py  test_util.py
