[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "spac_kit"
version = "0.2.2"
description = "Collection of Python tools for working with CCSDS Space Packets"
authors = [
    { name = "NASA/Caltech/JPL" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["CCSDS", "Space Packets", "Downlink", "Parser", "Documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "ccsdspy~=1.4.3",
    "crccheck~=1.3.0",
    "pandas~=2.3.3",
    "bitstring~=4.3.1",
    "openpyxl~=3.1.2",
    "setuptools~=67.8.0",
    "tqdm~=4.66.1"
]

[project.urls]
Homepage = "https://github.com/CCSDSPy/SPaC-Kit"

[project.scripts]
spac-parse = "spac_kit.parser.downlink_to_excel:main"
